Added typewriter and page content.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolie",
   "version": "1.0.0",
   "description": "This project will run the following tools:",
-  "main": "index.js",
+  "main": "nodemon server.js",
   "scripts": {
     "devStart": "nodemon server.js"
   },
