--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/StanMonev/Portfolie#readme",
   "dependencies": {
+    "brain.js": "^1.4.10",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-gyp": "^9.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
