--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project will run the following tools:",
   "main": "nodemon server.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "test": "mocha --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "node-gyp": "^9.3.1"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20"
   }
 }
