--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project will run the following tools:",
   "scripts": {
     "devStart": "nodemon server.js",
-    "productionStart": "node ./server.js"
+    "productionStart": "node ./server.js",
+    "migrate": "knex migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "nodemailer": "^6.9.7"
+    "knex": "^3.1.0",
+    "nodemailer": "^6.9.7",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
