--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
   },
   "homepage": "https://github.com/StanMonev/Portfolie#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "knex": "^3.1.0",
     "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.12.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.4"
   }
 }
